# metricly

./: .gitignore  CLAUDE.md  pyproject.toml
backend/app/: main.py
backend/app/api/: dif.py  efa.py  employees.py  frameworks.py  library.py  omega.py  reliability.py  reports.py  surveys.py  users.py
backend/app/core/: auth.py  config.py  database.py
backend/app/models/: __init__.py  framework.py  library.py  report.py  survey.py
backend/app/schemas/: dif.py  efa.py  framework.py  library.py  omega.py  reliability.py  survey.py
backend/app/services/: benchmarking.py  cohort_analytics.py  dif.py  efa.py  gap_analysis.py  interpretive_report.py  library.py  library_seed.py  omega.py  reliability.py  score_normalizer.py  scoring.py
backend/tests/: test_benchmarking.py  test_cohort_analytics.py  test_dif.py  test_efa.py  test_gap_analysis.py  test_interpretive_report.py  test_invites_roles.py  test_library.py  test_omega.py  test_reliability.py  test_score_normalizer.py
frontend/: jest.config.ts  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/403/: page.tsx
frontend/app/alpha/: page.tsx
frontend/app/frameworks/: page.tsx
frontend/app/login/: page.tsx
frontend/app/portal/: page.tsx
frontend/components/: AdminGuard.tsx  AuthProvider.tsx  Header.tsx  InterpretationBadge.tsx  ModuleCard.tsx
frontend/lib/: api.ts  i18n.ts  parseCSV.test.ts  parseCSV.ts  types.ts
memory/: MEMORY.md  migration_pattern.md  project_overview.md  user_profile.md
(+15 files in other folders)
